// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Tabs stateful - dynamic 1`] = `
.emotion-20 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

.emotion-0 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 0 15px;
  text-transform: uppercase;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  box-sizing: border-box;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  color: rgba(0,0,0,0.4);
  border-bottom-color: transparent;
}

.emotion-0:empty {
  display: none;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-18 {
  display: block;
}

.emotion-14 {
  height: 40px;
  background: rgba(255,255,255,1);
  border-bottom: 1px solid rgba(0,0,0,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: rgba(0,0,0,0.4);
}

.emotion-12 {
  overflow: auto;
  white-space: nowrap;
  height: 100%;
}

.emotion-4 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 0 15px;
  text-transform: uppercase;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  box-sizing: border-box;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  color: #444;
  border-bottom-color: rgba(0,0,0,0.1);
}

.emotion-4:empty {
  display: none;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-16 {
  display: block;
  position: relative;
}

<div
  class="emotion-20 emotion-21"
>
  <div
    style="height:calc(100vh - 20px)"
  >
    <div
      class="emotion-18 emotion-19"
    >
      <div
        class="emotion-14 emotion-15"
      >
        <div
          class="emotion-12 emotion-13"
          role="tablist"
        >
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #1
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #2
          </button>
          <button
            class="emotion-4 emotion-1"
            role="tab"
            type="button"
          >
            Tab with scroll!
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #4
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #5
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #6
          </button>
        </div>
      </div>
      <div
        class="emotion-16 emotion-17"
      >
        <div
          id="test1"
          title="Tab title #1"
        />
        <div
          id="test2"
          title="Tab title #2"
        />
        <div
          id="test3"
          title="Tab with scroll!"
        />
        <div
          id="test4"
          title="Tab title #4"
        />
        <div
          id="test5"
          title="Tab title #5"
        />
        <div
          id="test6"
          title="Tab title #6"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateful - no initial 1`] = `
.emotion-20 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

.emotion-2 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 0 15px;
  text-transform: uppercase;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  box-sizing: border-box;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  color: rgba(0,0,0,0.4);
  border-bottom-color: transparent;
}

.emotion-2:empty {
  display: none;
}

.emotion-2:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-18 {
  display: block;
}

.emotion-14 {
  height: 40px;
  background: rgba(255,255,255,1);
  border-bottom: 1px solid rgba(0,0,0,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: rgba(0,0,0,0.4);
}

.emotion-12 {
  overflow: auto;
  white-space: nowrap;
  height: 100%;
}

.emotion-0 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 0 15px;
  text-transform: uppercase;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  box-sizing: border-box;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  color: #444;
  border-bottom-color: rgba(0,0,0,0.1);
}

.emotion-0:empty {
  display: none;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-16 {
  display: block;
  position: relative;
}

<div
  class="emotion-20 emotion-21"
>
  <div
    style="height:calc(100vh - 20px)"
  >
    <div
      class="emotion-18 emotion-19"
    >
      <div
        class="emotion-14 emotion-15"
      >
        <div
          class="emotion-12 emotion-13"
          role="tablist"
        >
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #1
          </button>
          <button
            class="emotion-2 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #2
          </button>
          <button
            class="emotion-2 emotion-1"
            role="tab"
            type="button"
          >
            Tab with scroll!
          </button>
          <button
            class="emotion-2 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #4
          </button>
          <button
            class="emotion-2 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #5
          </button>
          <button
            class="emotion-2 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #6
          </button>
        </div>
      </div>
      <div
        class="emotion-16 emotion-17"
      >
        <div
          id="test1"
          title="Tab title #1"
        />
        <div
          id="test2"
          title="Tab title #2"
        />
        <div
          id="test3"
          title="Tab with scroll!"
        />
        <div
          id="test4"
          title="Tab title #4"
        />
        <div
          id="test5"
          title="Tab title #5"
        />
        <div
          id="test6"
          title="Tab title #6"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateful - static 1`] = `
.emotion-12 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

.emotion-0 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 0 15px;
  text-transform: uppercase;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  box-sizing: border-box;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  color: rgba(0,0,0,0.4);
  border-bottom-color: transparent;
}

.emotion-0:empty {
  display: none;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-10 {
  display: block;
}

.emotion-6 {
  height: 40px;
  background: rgba(255,255,255,1);
  border-bottom: 1px solid rgba(0,0,0,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: rgba(0,0,0,0.4);
}

.emotion-4 {
  overflow: auto;
  white-space: nowrap;
  height: 100%;
}

.emotion-2 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 0 15px;
  text-transform: uppercase;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  box-sizing: border-box;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  color: #444;
  border-bottom-color: rgba(0,0,0,0.1);
}

.emotion-2:empty {
  display: none;
}

.emotion-2:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-8 {
  display: block;
  position: relative;
}

<div
  class="emotion-12 emotion-13"
>
  <div
    style="height:calc(100vh - 20px)"
  >
    <div
      class="emotion-10 emotion-11"
    >
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-4 emotion-5"
          role="tablist"
        >
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            With a function
          </button>
          <button
            class="emotion-2 emotion-1"
            role="tab"
            type="button"
          >
            With markup
          </button>
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <div
          id="test1"
          title="With a function"
        />
        <div
          id="test2"
          title="With markup"
        >
          <div>
            test2 is always active (but visually hidden)
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateless - absolute 1`] = `
.emotion-20 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

.emotion-0 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 0 15px;
  text-transform: uppercase;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  box-sizing: border-box;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  color: rgba(0,0,0,0.4);
  border-bottom-color: transparent;
}

.emotion-0:empty {
  display: none;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-14 {
  height: 40px;
  background: rgba(255,255,255,1);
  border-bottom: 1px solid rgba(0,0,0,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: rgba(0,0,0,0.4);
}

.emotion-12 {
  overflow: auto;
  white-space: nowrap;
  height: 100%;
}

.emotion-4 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 0 15px;
  text-transform: uppercase;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  box-sizing: border-box;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  color: #444;
  border-bottom-color: rgba(0,0,0,0.1);
}

.emotion-4:empty {
  display: none;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-18 {
  background: rgba(255,255,255,0.89);
  background-clip: padding-box;
  border-radius: 4px;
  border: 1px solid rgba(0,0,0,0.1);
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-16 {
  display: block;
  position: relative;
  position: relative;
  overflow: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
}

<div
  class="emotion-20 emotion-21"
>
  <div
    style="height:calc(100vh - 20px)"
  >
    <div
      class="emotion-18 emotion-19"
    >
      <div
        class="emotion-14 emotion-15"
      >
        <div
          class="emotion-12 emotion-13"
          role="tablist"
        >
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #1
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #2
          </button>
          <button
            class="emotion-4 emotion-1"
            role="tab"
            type="button"
          >
            Tab with scroll!
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #4
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #5
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #6
          </button>
        </div>
      </div>
      <div
        class="emotion-16 emotion-17"
      >
        <div
          id="test1"
          title="Tab title #1"
        />
        <div
          id="test2"
          title="Tab title #2"
        />
        <div
          id="test3"
          title="Tab with scroll!"
        />
        <div
          id="test4"
          title="Tab title #4"
        />
        <div
          id="test5"
          title="Tab title #5"
        />
        <div
          id="test6"
          title="Tab title #6"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateless - bordered 1`] = `
.emotion-20 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

.emotion-0 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 0 15px;
  text-transform: uppercase;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  box-sizing: border-box;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  color: rgba(0,0,0,0.4);
  border-bottom-color: transparent;
}

.emotion-0:empty {
  display: none;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-14 {
  height: 40px;
  background: rgba(255,255,255,1);
  border-bottom: 1px solid rgba(0,0,0,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: rgba(0,0,0,0.4);
}

.emotion-12 {
  overflow: auto;
  white-space: nowrap;
  height: 100%;
}

.emotion-4 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 0 15px;
  text-transform: uppercase;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  box-sizing: border-box;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  color: #444;
  border-bottom-color: rgba(0,0,0,0.1);
}

.emotion-4:empty {
  display: none;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-16 {
  display: block;
  position: relative;
}

.emotion-18 {
  background: rgba(255,255,255,0.89);
  background-clip: padding-box;
  border-radius: 4px;
  border: 1px solid rgba(0,0,0,0.1);
  display: block;
}

<div
  class="emotion-20 emotion-21"
>
  <div
    style="height:calc(100vh - 20px)"
  >
    <div
      class="emotion-18 emotion-19"
    >
      <div
        class="emotion-14 emotion-15"
      >
        <div
          class="emotion-12 emotion-13"
          role="tablist"
        >
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #1
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #2
          </button>
          <button
            class="emotion-4 emotion-1"
            role="tab"
            type="button"
          >
            Tab with scroll!
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #4
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #5
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #6
          </button>
        </div>
      </div>
      <div
        class="emotion-16 emotion-17"
      >
        <div
          id="test1"
          title="Tab title #1"
        />
        <div
          id="test2"
          title="Tab title #2"
        />
        <div
          id="test3"
          title="Tab with scroll!"
        />
        <div
          id="test4"
          title="Tab title #4"
        />
        <div
          id="test5"
          title="Tab title #5"
        />
        <div
          id="test6"
          title="Tab title #6"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateless - empty 1`] = `
.emotion-2 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

.emotion-0 {
  font-size: 11px;
  display: block;
  text-align: center;
  text-transform: uppercase;
  margin: 0;
  padding: 20px;
}

<div
  class="emotion-2 emotion-3"
>
  <div
    style="height:calc(100vh - 20px)"
  >
    <p
      class="emotion-0 emotion-1"
    >
      no panels available
    </p>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateless - no scrolling 1`] = `
.emotion-20 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

.emotion-0 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 0 15px;
  text-transform: uppercase;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  box-sizing: border-box;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  color: rgba(0,0,0,0.4);
  border-bottom-color: transparent;
}

.emotion-0:empty {
  display: none;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-14 {
  height: 40px;
  background: rgba(255,255,255,1);
  border-bottom: 1px solid rgba(0,0,0,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: rgba(0,0,0,0.4);
}

.emotion-4 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 0 15px;
  text-transform: uppercase;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  box-sizing: border-box;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  color: #444;
  border-bottom-color: rgba(0,0,0,0.1);
}

.emotion-4:empty {
  display: none;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-16 {
  display: block;
  position: relative;
}

.emotion-18 {
  background: rgba(255,255,255,0.89);
  background-clip: padding-box;
  border-radius: 4px;
  border: 1px solid rgba(0,0,0,0.1);
  display: block;
}

.emotion-12 {
  overflow: visisble;
  white-space: nowrap;
  height: 100%;
}

<div
  class="emotion-20 emotion-21"
>
  <div
    style="height:calc(100vh - 20px)"
  >
    <div
      class="emotion-18 emotion-19"
    >
      <div
        class="emotion-14 emotion-15"
      >
        <div
          class="emotion-12 emotion-13"
          role="tablist"
        >
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #1
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #2
          </button>
          <button
            class="emotion-4 emotion-1"
            role="tab"
            type="button"
          >
            Tab with scroll!
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #4
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #5
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #6
          </button>
        </div>
      </div>
      <div
        class="emotion-16 emotion-17"
      >
        <div
          id="test1"
          title="Tab title #1"
        />
        <div
          id="test2"
          title="Tab title #2"
        />
        <div
          id="test3"
          title="Tab with scroll!"
        />
        <div
          id="test4"
          title="Tab title #4"
        />
        <div
          id="test5"
          title="Tab title #5"
        />
        <div
          id="test6"
          title="Tab title #6"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateless - with tools 1`] = `
.emotion-22 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

.emotion-0 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 0 15px;
  text-transform: uppercase;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  box-sizing: border-box;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  color: rgba(0,0,0,0.4);
  border-bottom-color: transparent;
}

.emotion-0:empty {
  display: none;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-20 {
  display: block;
}

.emotion-16 {
  height: 40px;
  background: rgba(255,255,255,1);
  border-bottom: 1px solid rgba(0,0,0,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: rgba(0,0,0,0.4);
}

.emotion-12 {
  overflow: auto;
  white-space: nowrap;
  height: 100%;
}

.emotion-4 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 0 15px;
  text-transform: uppercase;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  box-sizing: border-box;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  color: #444;
  border-bottom-color: rgba(0,0,0,0.1);
}

.emotion-4:empty {
  display: none;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-18 {
  display: block;
  position: relative;
}

.emotion-14 {
  height: 100%;
  padding-right: 15px;
  padding-left: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-14 > * {
  margin-right: 15px;
}

.emotion-14 > *:last-child {
  margin-right: 0;
}

<div
  class="emotion-22 emotion-23"
>
  <div
    style="height:calc(100vh - 20px)"
  >
    <div
      class="emotion-20 emotion-21"
    >
      <div
        class="emotion-16 emotion-17"
      >
        <div
          class="emotion-12 emotion-13"
          role="tablist"
        >
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #1
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #2
          </button>
          <button
            class="emotion-4 emotion-1"
            role="tab"
            type="button"
          >
            Tab with scroll!
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #4
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #5
          </button>
          <button
            class="emotion-0 emotion-1"
            role="tab"
            type="button"
          >
            Tab title #6
          </button>
        </div>
        <div
          class="emotion-14 emotion-15"
        >
          <button
            type="button"
          >
            1
          </button>
          <button
            type="button"
          >
            2
          </button>
        </div>
      </div>
      <div
        class="emotion-18 emotion-19"
      >
        <div
          id="test1"
          title="Tab title #1"
        />
        <div
          id="test2"
          title="Tab title #2"
        />
        <div
          id="test3"
          title="Tab with scroll!"
        />
        <div
          id="test4"
          title="Tab title #4"
        />
        <div
          id="test5"
          title="Tab title #5"
        />
        <div
          id="test6"
          title="Tab title #6"
        />
      </div>
    </div>
  </div>
</div>
`;
